Fix homepage hero title overlapping fixed header on desktop

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,11 +80,14 @@ body {
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
+}
+
+body.inner-page {
   padding-top: 80px;
 }
 
 @media (max-width: 1024px) {
-  body {
+  body.inner-page {
     padding-top: 70px;
   }
 }
